--- a/index.html
+++ b/index.html
@@ -80,5 +80,20 @@ Page generated 2019-08-14 21:30:12 , by <a href="http://jemdoc.jaboc.net/">jemdo
 </td>
 </tr>
 </table>
+<!-- Default Statcounter code for My personal homepage sample
+https://blackgong.github.io/ -->
+<script type="text/javascript">
+var sc_project=12063466; 
+var sc_invisible=1; 
+var sc_security="a377a3d7"; 
+var sc_https=1; 
+var sc_remove_link=1; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><img class="statcounter"
+src="https://c.statcounter.com/12063466/0/a377a3d7/1/" alt="Web Analytics Made
+Easy - StatCounter"></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
